--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
  <div class="nav2 nav">HOME</div>
  <div class="nav2 nav">PATREON</div>
  <div class="nav3 nav nav2">MENU<ul>
-	<li><a href="../page2/comsciprojpage2">Why?</a>
-	<li><a href="../page3/page3">How?</a>
+	<li><a href="page2/page2.html">Why?</a>
+	<li><a href="page3/page3.html">How?</a>
 		</ul></div>
  </nav>
  <div class="image">
