--- a/page2/page2.html
+++ b/page2/page2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>cs proj</title>
-<link href="css.css" rel="stylesheet" type="text/css" media="screen">
+<link href="css2.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
 <body>
