--- a/page2/page2.html
+++ b/page2/page2.html
@@ -2,62 +2,60 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>cs proj</title>
+<title>Why data privacy?</title>
 <link href="css2.css" rel="stylesheet" type="text/css" media="screen">
+<link href='https://fonts.googleapis.com/css?family=Amiko' rel='stylesheet'>
 </head>
 
 <body>
-
- <nav>
- <div class="nav"></div>
- <div class="nav2 nav"></div>
- <div class="nav2 nav"></div>
- <div class="nav3 nav nav2"></div>
- </nav>
+<div class="nav">
+	<a href="" class="pic"><img src="../images/anonymoose" alt="ANONYMOOSElogo"></a>
+	<a href="../page1/page1.html">HOME</a>
+	<a href="">GOFUNDME</a>
+	<div class="boop">
+		<button>MENU</button>
+		<div class="secret">
+			<a href="page2.html">Why?</a>
+			<br>
+			<a href="../page3/page3.html">How?</a>
+		</div>
+	</div>
+</div>
 	
 <div class="content">
 <div class="container">
-	<div class="headers">Content for  class "headers" Goes Here</div>
+	<div class="headers">Why Is Data Privacy Important?</div>
 	<div class="mainimg">Content for  class "mainimg" Goes Here</div>
-	<div class="maintxt">Content for  class "maintxt" Goes Here</div>
+	<div class="maintxt">When you sign up for an account on a social media site, the site usually asks you for some information about yourself, such as your full name, your gender, your birthdate, and sometimes your place of residence. Keeping this data private is vital - as there are many ways other people can access this data.
+		<br><br>
+
+If someone gets ahold of your personal information, you could be subject to identity theft. Identity theft is an act where someone masquerades as you, even though they’re not you. Additionally, some pieces of information (such as bank details, addresses and social security numbers) are very sensitive - and if someone accesses these pieces of information, they could potentially do very bad things to your accounts and credentials.
 </div>
- <div class="container">
-	<div class="headers">Content for  class "headers" Goes Here</div>
-	<div class="dropdown">Content for  class "dropdown" Goes Here</div>
-	<div class="dropdown">Content for  class "dropdown" Goes Here</div>
-	<div class="dropdown">Content for  class "dropdown" Goes Here</div>
+</div>
+ <div class="container" >
+	<div class="headers">What are examples of companies that have your data?</div>
+	<div class="maintxt">When you click the I ACCEPT button on a website, you subsequently agree to a few terms which you may or may not have read. For many websites, this means that you agree to the use of cookies. <br><br>Cookies are basic bits of information about you. This could include your computer’s model and type, your username and password, what sites you’ve visited, what videos you’ve watched, and what links you’ve clicked. This data could be used for many purposes, such as research and advertising purposes. Below are some of the more well-known sites that collect your data.</div>
+
+	<div class="dropdown">Have you seen an ad that looks like something you’ve visited a few minutes ago? Google tracks your searches and looks for advertisers that have products which might fit your recent searches. If you have a Google Account, however, Google knows a lot more than you might think. <br>
+
+When making a new account, you give Google a few pieces of information, such as your name, your country of residence, your birthdate, and your phone number. Whenever you log in to Gmail, Google also records the IP address where you logged in, the browser and operating system you are using, and your location. Google stores this information
+</div>
+	<div class="dropdown"> Similarly to Google, Facebook also tracks your searches and your location. Additionally, it tracks the posts you’ve reacted to (positively or negatively), the comments you post, and the videos you watch. There are also some sites that embed the Facebook sharing and comment system - when you use these services, Facebook tracks your activity too. Facebook uses this information for advertising purposes too.
+</div>
+	<div class="dropdown"></div>
  </div>
-<div class="container">
-	<div class="headers">Content for  class "headers" Goes Here</div>
-	<div class="pics">Content for  class "pics" Goes Here</div>
-	<div class="pics">Content for  class "pics" Goes Here</div>
-	<div class="pics">Content for  class "pics" Goes Here</div>
-	<div class="text">Content for  class "text" Goes Here</div>
-	<div class="text">Content for  class "text" Goes Here</div>
-	<div class="text">Content for  class "text" Goes Here</div>
-</div>
-<div class="container">
-	<div class="headers">Content for  class "headers" Goes Here</div>
-	<div class="pics">Content for  class "pics" Goes Here</div>
-	<div class="pics">Content for  class "pics" Goes Here</div>
-	<div class="pics">Content for  class "pics" Goes Here</div>
-	<div class="pics">Content for  class "pics" Goes Here</div>
-	<div class="pics">Content for  class "pics" Goes Here</div>
-	<div class="pics">Content for  class "pics" Goes Here</div>
-</div>
-	
-</div>
+
 	
 <footer>
-  <div class="footertitle"></div>
+  <div class="footertitle">TEAM</div>
    <div class="ficontainer">
-    <div class="ficon"></div>
-    <div class="ficon ficon2"></div>
-    <div class="ficon ficon2"></div>
+    <div class="ficon">horse</div>
+    <div class="ficon ficon2">hamster</div>
+    <div class="ficon ficon2">pingu</div>
    </div>
-   <div class="fname"></div>
-   <div class="fname fname2"></div>
-   <div class="fname fname2"></div>
+   <div class="fname">Racquel Alyssa Catolico</div>
+   <div class="fname fname2">Raphael Dylan Dalida</div>
+   <div class="fname fname2">Anjelo Gabrielli</div>
    <div class="qcircle"></div>
  </footer>
 
