--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 "promise" to keep your data safe, and to only use the data for the purposes you have agreed to.
 The catch is that important information about these purposes can only be found in an extremely boring, hard-to-read wall of text called the Privacy Policy. Many people skip the privacy policy due to this reason, and therefore unknowingly agree to a bunch of really scary stuff. Read on to learn more. 
 </div>
-  <div class="aboutimg"><img src="images/data privacy home.png"></div>
+  <div class="aboutimg"><img src="images/data privacy home.png" class"diffimg"></div>
 </div>
  <footer>
    <div class="footertitle">TEAM</div>
