--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 
 <body>
 
- <nav>
- <div class="nav">NEWSITE</div>
- <div class="nav2 nav">HOME</div>
- <div class="nav2 nav">PATREON</div>
- <div class="nav3 nav nav2">MENU<ul>
-	<li><a href="page2/page2.html">Why?</a>
-	<li><a href="page3/page3.html">How?</a>
-		</ul></div>
- </nav>
+ <div class="nav">
+	<a href="" class="pic"><img src="../images/anonymoose" alt="ANONYMOOSElogo"></a>
+	<a href="../page1/page1.html">HOME</a>
+	<a href="">GOFUNDME</a>
+	<div class="boop">
+		<button>MENU</button>
+		<div class="secret">
+			<a href="page2.html">Why?</a>
+			<br>
+			<a href="../page3/page3.html">How?</a>
+		</div>
+	</div>
+</div>
  <div class="image">
  <div class="imagetitle">DATA PRIVACY</div>
  <div class="imagecontent">It's something everyone knows should be protected, but also something nobody makes an effort to protect.</div>
