--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
 
  <div class="nav">
-	<a href="" class="pic"><img src="../images/anonymoose" alt="ANONYMOOSElogo"></a>
-	<a href="../page1/page1.html">HOME</a>
+	<a href="" class="pic"><img src="images/anonymouswh.png" alt="ANONYMOOSElogo"></a>
+	<a href="index.html">HOME</a>
 	<a href="">GOFUNDME</a>
 	<div class="boop">
 		<button>MENU</button>
 		<div class="secret">
-			<a href="page2.html">Why?</a>
+			<a href="page2/page2.html">Why?</a>
 			<br>
-			<a href="../page3/page3.html">How?</a>
+			<a href="page3/page3.html">How?</a>
 		</div>
 	</div>
 </div>
