--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
  <div class="nav">
-	<a href="" class="pic"><img src="images/anonymouswh.png" alt="ANONYMOOSElogo"></a>
+	<a href="" class="pic"><img src="images/anonymouswh.png" alt="ANONYMOOSElogo" id="logo"></a>
 	<a href="index.html">HOME</a>
 	<a href="">GOFUNDME</a>
 	<div class="boop">
@@ -31,14 +31,14 @@
 "promise" to keep your data safe, and to only use the data for the purposes you have agreed to.
 The catch is that important information about these purposes can only be found in an extremely boring, hard-to-read wall of text called the Privacy Policy. Many people skip the privacy policy due to this reason, and therefore unknowingly agree to a bunch of really scary stuff. Read on to learn more. 
 </div>
-  <div class="aboutimg"><diffimg src="images/data privacy home.png" class"diffimg"></div>
+  <div class="aboutimg"><img src="images/data privacy home.png" id="image"></div>
 </div>
  <footer>
    <div class="footertitle">TEAM</div>
    <div class="ficontainer">
-    <div class="ficon"><img src="images/horse.png"></div>
-    <div class="ficon ficon2"><img src="images/hamster.png"></div>
-    <div class="ficon ficon2"><img src="images/pingu.png"></div>
+    <div class="ficon"><img src="images/horse.png" id="icon"></div>
+    <div class="ficon ficon2"><img src="images/hamster.png" id="icon"></div>
+    <div class="ficon ficon2"><img src="images/pingu.png" id="icon"></div>
    </div>
    <div class="fname">Racquel Alyssa Catolico</div>
    <div class="fname fname2">Raphael Dylan Dalida</div>
