--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@ The catch is that important information about these purposes can only be found i
 </div>
   <div class="aboutimg"><img src="images/data privacy home.png" id="image"></div>
 </div>
- <footer>
-   <div class="footertitle">TEAM</div>
+<footer>
+  <div class="footertitle">TEAM</div>
    <div class="ficontainer">
-    <div class="ficon"><img src="images/horse.png" id="icon"></div>
-    <div class="ficon ficon2"><img src="images/hamster.png" id="icon"></div>
-    <div class="ficon ficon2"><img src="images/pingu.png" id="icon"></div>
+    <div class="ficon">horse</div>
+    <div class="ficon ficon2">hamster</div>
+    <div class="ficon ficon2">pingu</div>
    </div>
    <div class="fname">Racquel Alyssa Catolico</div>
    <div class="fname fname2">Raphael Dylan Dalida</div>
