--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@ The catch is that important information about these purposes can only be found i
 <footer>
   <div class="footertitle">TEAM</div>
    <div class="ficontainer">
-    <div class="ficon">horse</div>
-    <div class="ficon ficon2">hamster</div>
-    <div class="ficon ficon2">pingu</div>
+    <div class="ficon"><img src="images/horse.png" id="icon"></div>
+    <div class="ficon ficon2"><img src="images/hamster.png" id="icon"></div>
+    <div class="ficon ficon2"><img src="images/pingu.png" id="icon"></div>
    </div>
    <div class="fname">Racquel Alyssa Catolico</div>
    <div class="fname fname2">Raphael Dylan Dalida</div>
