--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
 			<a href="page3/page3.html">How?</a>
 		</div>
 	</div>
-</div>
- <div class="image">
- <div class="imagetitle">DATA PRIVACY</div>
- <div class="imagecontent">It's something everyone knows should be protected, but also something nobody makes an effort to protect.</div>
+ <div class="yuuge">
+ <div class="ilovepe"></div>
+ <br>
+ <br>
+ <div class="jumbo">DATA PRIVACY </div>
+ <br>
+ <div class="desc"> It's something everyone knows should be protected, but also something nobody makes an effort to protect. </div>
 </div>
 <div class="content">
   <div class="about">   Data privacy, in simple terms, is the term referring to the protection of your own data. When you lend your personal information to a company or corporation, these companies 
