--- a/page3/page3.html
+++ b/page3/page3.html
@@ -43,7 +43,7 @@
     <div class="ficon ficon2"><img src="../images/hamster.png" id="icon"></div>
     <div class="ficon ficon2"><img src="../images/pingu.png" id="icon"></div>
    </div>
-   <div class="fname">Racquel ALyssa Catolico</div>
+   <div class="fname">Racquel Alyssa Catolico</div>
    <div class="fname fname2">Raphael Dylan Dalida</div>
    <div class="fname fname2">Anjelo Gabrielli</div>
    <div class="qcircle"></div>
