--- a/page3/page3.html
+++ b/page3/page3.html
@@ -10,12 +10,19 @@
 
 <body>
 
- <nav>
- <div class="nav">ANONYMOOSE</div>
- <div class="nav2 nav">HOME</div>
- <div class="nav2 nav">PATREON</div>
- <div class="nav3 nav nav2">MENU</div>
- </nav>
+ <div class="nav">
+	<a href="" class="pic"><img src="images/anonymous wh.png" alt="ANONYMOOSElogo" id="logo"></a>
+	<a href="index.html">HOME</a>
+	<a href="">GOFUNDME</a>
+	<div class="boop">
+		<button>MENU</button>
+		<div class="secret">
+			<a href="page2/page2.html">Why?</a>
+			<br>
+			<a href="page3/page3.html">How?</a>
+		</div>
+	</div>
+</div>
  <div class="headers"> What are some ways we can keep our data private? </div>
  <div class="monitor">
 	 <div class="cover"></div>
