--- a/page3/page3.html
+++ b/page3/page3.html
@@ -11,15 +11,15 @@
 <body>
 
  <div class="nav">
-	<a href="" class="pic"><img src="images/anonymous wh.png" alt="ANONYMOOSElogo" id="logo"></a>
+	<a href="" class="pic"><img src="../images/anonymous wh.png" alt="ANONYMOOSElogo" id="logo"></a>
 	<a href="index.html">HOME</a>
 	<a href="">GOFUNDME</a>
 	<div class="boop">
 		<button>MENU</button>
 		<div class="secret">
-			<a href="page2/page2.html">Why?</a>
+			<a href="..page2/page2.html">Why?</a>
 			<br>
-			<a href="page3/page3.html">How?</a>
+			<a href="page3.html">How?</a>
 		</div>
 	</div>
 </div>
